# kanibako

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  clodbox  clodbox-archive  clodbox-clean  clodbox-config  clodbox-install  clodbox-lib-common  clodbox-refresh-credentials  clodbox-remove  clodbox-restore  devnotes.md  pyproject.toml
.github/workflows/: build-host-image.yml  build-images.yml  lint-vm.yml  release.yml  template-verify.yml  test.yml
containers/: Containerfile.android  Containerfile.base  Containerfile.behemoth  Containerfile.systems
docs/: RELEASING.md  architecture.md  host-deployment.md  tweakcc.md  writing-targets.md
docs/claude-notes/: bash-devnotes.md
docs/plans/: 2026-02-21-code-review-design.md  2026-02-21-code-review-findings.md  2026-02-22-resource-sharing-design.md  2026-02-22-target-abc-resource-sharing.md  2026-02-23-redesign-config-agents-sharing.md  2026-02-23-templates-and-shared-caches.md  2026-03-06-peer-communication-design.md  2026-03-07-init-redesign.md  2026-03-07-smoke-tests-design.md  2026-03-07-smoke-tests-plan.md  2026-03-08-cli-audit-implementation.md
examples/: README.md
examples/kanibako-target-aider/: README.md  pyproject.toml
examples/kanibako-target-aider/src/kanibako_target_aider/: __init__.py
examples/kanibako-target-aider/tests/: test_aider_target.py
examples/kanibako-target-codex/: README.md  pyproject.toml
examples/kanibako-target-codex/src/kanibako_target_codex/: __init__.py
examples/kanibako-target-codex/tests/: test_codex_target.py
examples/kanibako-target-goose/: README.md  pyproject.toml
examples/kanibako-target-goose/src/kanibako_target_goose/: __init__.py
examples/kanibako-target-goose/tests/: test_goose_target.py
host-definitions/: Containerfile.host  Containerfile.host-claude
host-definitions/ansible/: playbook.yml
host-definitions/archive/: Containerfile.host-claude
host-definitions/vm/: Vagrantfile  create-libvirt-vm.sh  create-proxmox-vm.sh
scripts/: build-all.sh  clodbox  clodbox-archive  clodbox-config  clodbox-image  clodbox-install  clodbox-lib  clodbox-refresh-credentials  clodbox-restore  release-rc.sh
src/clodbox/: __init__.py  cli.py  container.py  containerfiles.py  freshness.py  registry.py
src/kanibako/: __init__.py  __main__.py  agents.py  auth_browser.py  auth_parser.py  browser_sidecar.py  browser_state.py  cli.py  config.py  config_interface.py  config_io.py  container.py  containerfiles.py  crabs.py  credentials.py  errors.py  freshness.py  git.py  helper_client.py  helper_listener.py  helpers.py  hygiene.py  instructions.py  names.py  paths.py  registry.py  rig_bundle.py  rig_meta.py  rig_registry.py  rig_resolve.py  rig_source.py  settings_resolve.py  settings_seeds.py  settings_shares.py  shellenv.py  snapshots.py  templates.py  templates_image.py  utils.py  workset.py
tests/: conftest.py  conftest_integration.py  test_agents.py  test_archive_restore_integration.py  test_auth_browser.py  test_auth_parser.py  test_box_commands.py  test_browser_state.py  test_bun_sea.py  test_cli.py  test_cli_exitcodes.py  test_comms.py  test_config.py  test_config_extended.py  test_config_interface.py  test_container.py  test_container_extended.py  test_container_integration.py  test_containerfiles.py  test_crabs.py  test_credentials.py  test_credentials_extended.py  test_decentralized_paths.py  test_env_cmd.py  test_fork.py  test_freshness.py  test_git.py  test_helper_client.py  test_helper_cmd.py  test_helper_listener.py  test_helpers.py  test_hygiene.py  test_image_sharing.py  test_init_cmd.py  test_install_integration.py  test_instructions.py  test_lifecycle_integration.py  test_names.py  test_paths.py  test_paths_extended.py  (+23 more)
tests/e2e/: conftest.py  test_agent_flow.py  test_env_flags.py  test_error_recovery.py  test_extend_export.py  test_infrastructure.py  test_lazy_prep.py  test_lifecycle.py  test_shell_exec.py  test_status.py  test_template_create.py
tests/test_commands/: test_agent_cmd.py  test_archive.py  test_archive_extended.py  test_box.py  test_box_move.py  test_box_ps.py  test_box_rm_purge.py  test_clean.py  test_clean_extended.py  test_config_cmd.py  test_connect.py  test_crab_cmd.py  test_diagnose.py  test_image.py  test_image_extended.py  test_install.py  test_install_extended.py  test_migrate_clodbox.py  test_remove.py  test_restore.py  test_restore_extended.py  test_setup.py  (+8 more)
(+65 files in other folders)
