[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kanibako"
version = "0.5.0"
description = "Run Claude Code in rootless containers with per-project isolation"
requires-python = ">=3.11"
dependencies = ["argcomplete>=3.0"]

[project.scripts]
kanibako = "kanibako.cli:main"

[project.entry-points."kanibako.targets"]
claude = "kanibako.targets.claude:ClaudeTarget"
no_agent = "kanibako.targets.no_agent:NoAgentTarget"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "mypy", "ruff", "bump2version"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kanibako.containers" = ["Containerfile.*"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring a real container runtime (podman/docker)",
]
addopts = "-m 'not integration'"
