[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kanibako-target-aider"
version = "0.1.0"
description = "Kanibako target plugin for Aider"
requires-python = ">=3.11"
dependencies = ["kanibako"]

[project.entry-points."kanibako.targets"]
aider = "kanibako_target_aider:AiderTarget"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
