[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kanibako-target-codex"
version = "0.1.0"
description = "Kanibako target plugin for Codex CLI"
requires-python = ">=3.11"
dependencies = ["kanibako"]

[project.entry-points."kanibako.targets"]
codex = "kanibako_target_codex:CodexTarget"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
