[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kanibako-target-goose"
version = "0.1.0"
description = "Kanibako target plugin for Goose"
requires-python = ">=3.11"
dependencies = ["kanibako"]

[project.entry-points."kanibako.targets"]
goose = "kanibako_target_goose:GooseTarget"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
